# tileworld-egine

./: Cargo.toml  README.md
src/: app.rs
src/engine/: asset_registry.rs  mod.rs
src/engine/render/: camera.rs  lighting.rs  mesh.rs  mod.rs  renderer.rs  sky.rs  sprite_batch.rs
src/engine/render/shaders/: sprite_batch.wgsl
src/engine/render/shaders/lighting/: ambient_occlusion.wgsl  diffuse_light.wgsl  light_sources.wgsl  sky_light.wgsl  smooth_light.wgsl  upscale_lightmap.wgsl
src/game/: game.rs  mod.rs
src/game/entities/: bomb.rs  mod.rs  particle.rs
src/game/items/: definition.rs  inventory.rs  item_registry.rs  mod.rs  projectile.rs
src/game/physics/: collider.rs  transform.rs
src/game/player/: player.rs
src/game/terrain/: chunk.rs  chunk_manager.rs
