[package]
name = "tile-based-terrain"
version = "0.1.0"
edition = "2024"

[dependencies]
easy-gpu = "0.5.5"
winit = "0.30.9"
pollster = "0.4.0"
bytemuck = "1.22.0"
serde = { version = "1.0.219", features = ["derive"] }
fast-noise-lite-rs = "0.8.0"
rand = "0.9.0"
rayon = "1.10.0"
hecs = "0.10.5"
bincode = "1.3.3"
mimalloc = "0.1"
ahash = "0.8.12"